Add databaseURL and redirectURI env variables, add link to Get Tracks Button, change redirect URL to /abums and change font to Cabin Sketch

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
   </header>
   <div class="getTrack">
     <p>Click 'Get Tracks' to instantly add all 700+ tracks to a Spotify playlist</p>
-    <a href="/#" class="paper-btn">Get Tracks</a>
+    <a href="/login" class="paper-btn">Get Tracks</a>
   </div>
   <div class="navigation">
     <p>See all albums that will be added</p>
