Change text in paragraph on home page describing what happens when Get Tracks is clicked

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <span>according to <a href="https://www.complex.com/music/best-albums-2018/" target="_blank">Complex Magazine</a></span>
   </header>
   <div class="getTrack">
-    <p>Click 'Get Tracks' to instantly add all 700+ tracks to a Spotify playlist</p>
+    <p>Click 'Get Tracks' to instantly add all 700+ tracks from those albums to a Spotify playlist</p>
     <a href="/login" class="paper-btn">Get Tracks</a>
   </div>
   <div class="navigation">
