--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <% include partials/header %>
-<body class="home">
+<body class="homePage">
   <header>
     <h1>Best Albums of 2018</h1>
     <span>according to <a href="https://www.complex.com/music/best-albums-2018/" target="_blank">Complex Magazine</a></span>
