--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,5 +9,5 @@
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/paper.css">
     <link rel="stylesheet" href="/stylesheets/main.css">
-    <title>Top Tracks 2018</title>
+    <title>Best Tracks 2018</title>
   </head>
