--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -10,12 +10,30 @@ body{
 }
 
 /* .home class selects homepage body element */
-.home{ 
+.homePage{ 
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   flex-direction: column;
+}
+
+a {
+  background-image: linear-gradient(5deg,transparent 65%,#27592D 80%,transparent 90%),linear-gradient(165deg,transparent 5%,#27592D 15%,transparent 25%),linear-gradient(165deg,transparent 45%,#27592D 55%,transparent 65%),linear-gradient(15deg,transparent 25%,#27592D 35%,transparent 50%);
+  background-position: 0 90%;
+  background-repeat: repeat-x;
+  background-size: 4px 3px
+}
+
+h1, .paper-btn, .fas, a:visited, .album:nth-child(even) label, 
+.album:nth-child(even) .albumInfo {
+  color:crimson;
+}
+
+
+/* Select label and albumInfo elements of every other album class*/
+.album:nth-child(odd) label, .album:nth-child(odd) .albumInfo {
+  color: #27592D;
 }
 
 div .paper-btn {
@@ -30,9 +48,7 @@ header h1{
   margin-bottom: 5%;
 }
 
-
-
-.albums .navigation p{
+.albumsPage .navigation p{
   margin-top: 3px;
 }
 
