--- a/views/albums.ejs
+++ b/views/albums.ejs
@@ -8,6 +8,11 @@
     <a class="fas fa-arrow-up border border-5 border-primary" href="/"></a>
     <p>Go Home</p>
   </div>
+  <% if (trackCount === 703) { %>
+    <p class="success"><%=trackCount%> of 703 tracks added successfully</p>
+  <% } else if(trackCount < 703 && trackCount > 0) { %>
+    <p class="error">Error: Only <%=trackCount%> of 703 tracks added successfully</p>
+  <% } %>
 <div class="pageContent">
   <% var count = 0; %>
   <% for(var k = 0; k < albums.length / 5; k++) {%>
