Remove feature that displays number of sucessful tracks added
This feature was removed for now because more time is needed to find a better approach to doing it
I have commened out the code that enabled  trackCount functionality and the /albumAdded route

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -32,7 +32,7 @@ h1, .paper-btn, .fas, a:visited, .album:nth-child(even) label,
 
 
 /* Select label and albumInfo elements of every other album class*/
-.album:nth-child(odd) label, .album:nth-child(odd) .albumInfo, .sucess {
+.album:nth-child(odd) label, .album:nth-child(odd) .albumInfo, .success {
   color: #27592D;
 }
 
