--- a/views/albumsAdded.ejs
+++ b/views/albumsAdded.ejs
@@ -12,7 +12,7 @@
   <% if (trackCount === 703) { %>
   <p class="success">
     <%=trackCount%> of 703 tracks added successfully</p>
-  <% } else if(trackCount < 703 && trackCount > 0) { %>
+  <% } else if(trackCount < 703) { %>
   <p class="error">Error: Only
     <%=trackCount%> of 703 tracks added successfully</p>
   <% } %>
