--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -86,6 +86,21 @@ a.fas:hover{
   margin-bottom: 0px;
 }
 
+
+
+@media all and (max-width:425px){
+  header, .getTrack {
+    padding-left: 4%;
+    padding-right: 4%;
+  }
+}
+
+@media all and (max-height:635px){
+  .navigation{
+    padding-bottom: 7%;
+  }
+}
+
 @media all and (max-width:800px){
   .pageContent {
     display: flex;
@@ -95,4 +110,8 @@ a.fas:hover{
     width: 80%;
     margin-bottom: 10%;
   } 
+  .homePage{
+    display: flex;
+    flex-direction: column;
+  }
 }
