--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -56,6 +56,10 @@ header h1{
   margin-bottom: 3px;
 }
 
+.fas {
+  padding:2px;
+}
+
 a.fas{
   /* text-decoration: none; */
   background-image: none;
