--- a/views/albumsAdded.ejs
+++ b/views/albumsAdded.ejs
@@ -24,7 +24,10 @@
       <div class="collapsible border-dotted album">
         <input id="collapsible<%=i%>" type="checkbox" name="collapsible">
         <label for="collapsible<%=i%>">
-          <%=albums[i].name%></label>
+          <% if(albums[i].position === 1){ %>
+            <i class="fas fa-crown border border-5 border-primary"></i>
+          <% } %>
+          <%=albums[i].position%>. <%=albums[i].name%></label>
         <div class="collapsible-body albumInfo">
           <h3 class="artistName">
             <%=albums[i].artist%>
