--- a/views/albumsAdded.ejs
+++ b/views/albumsAdded.ejs
@@ -29,6 +29,7 @@
           <% } %>
           <%=albums[i].position%>. <%=albums[i].name%></label>
         <div class="collapsible-body albumInfo">
+          <a href="https://open.spotify.com/album/<%=albums[i].album_id%>" target="_blank">link</a>
           <h3 class="artistName">
             <%=albums[i].artist%>
           </h3>
