--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,9 @@
+  <div class="footer">
+    <p>Made with
+      <span style="color: #e25555;">&hearts;</span> by
+      <a href="https://www.akonobrathwaite.com" target="_target">Akono</a>
+    </p>
+  </div>
+
   </body>
 </html> 
