Load albumsAdded page that displays link to created playlist when Create Playlist button clicked
This is a replacement for the previous userflow where user would be redirected to the created playlist directly.
This change was made because users who had just completed their authorization were simply sent to their Spotify Page and not to the playlist

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -85,6 +85,7 @@ a.fas:hover{
   grid-column-gap: 2%;
   grid-row-gap: 4%;
   justify-content: center;
+  margin-top: 2.5%
 }
 .collapsible{
   width: 100%;
